license formatting